fix footer elements, remove overflow

--- a/src/App.css
+++ b/src/App.css
@@ -11,5 +11,6 @@
   padding: 2rem;
   text-align: center;
   text-decoration: none;
+  overflow-x: hidden;
 }
 
